added the clearall button to the notes and added validation for the input fields also

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
       <h2>Notes</h2>
       <textarea id="note-input" placeholder="Write a note..."></textarea>
       <button id="save-note-btn">Save Note</button>
+      <button id="clearAll-btn">Clear All</button>
       <ul id="note-list"></ul>
+    </section>
+    <section id="clearPopUp">
+      <div id="clearAll">
+        <p id="clearAllContent">Are you sure you want to clear all notes</p>
+        <button id="clearAll-inner-btn">Clear All</button>
+        <button id="close-clearAll-pop-up-btn">Close</button>
+      </div>
     </section>
 
     <section id="weather">
@@ -46,6 +54,13 @@
       <input type="text" id="goal-input" placeholder="Set a goal">
       <button id="add-goal-btn">Add Goal</button>
       <ul id="goal-list"></ul>
+    </section>
+
+    <section id="pop-up">
+      <div id="pop-up-content">
+        <p id="pop-up-message"></p>
+        <button id="close-pop-up-btn">Close</button>
+      </div>
     </section>
   </main>
 
